2005-12-15  Alasdair Allan <aa@astro.ex.ac.uk>

	* VOEvent.pm: Moved to XML::Simple for parsing.
        
        * VOEvent.pm: Limited STC support.
	
2005-07-27  Alasdair Allan <aa@astro.ex.ac.uk>

        * VOEvent.pm: Support for "simple" positions, synced with RAPTOR
	  parser for interoperability between the networks.

2005-05-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Import into Sourceforge CVS

2005-04-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version.